# dpad-store

./: .gitignore  CLAUDE.md  README.md  meson.build  post_install.py
.claude/comandos/: compilar.md  instalar.md
.claude/reglas/: framework.md  project-structure.md
data/: io.github.libredeb.dpad-store.1  io.github.libredeb.dpad-store.desktop.in  io.github.libredeb.dpad-store.gresource.xml
data/styles/: application.css
src/: Application.vala  Config.vala.in  Constants.vala  Main.vala
src/Backend/: AppInfo.vala  AppLoader.vala  CatalogService.vala  GamepadManager.vala  IconService.vala  Installer.vala
src/Widgets/: AppListRow.vala  AppTile.vala  ConsoleOutput.vala  DetailPanel.vala  MainWindow.vala
